--- a/MoonJet/MoonJet.csproj
+++ b/MoonJet/MoonJet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -33,4 +33,7 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
+    <ItemGroup>
+      <Folder Include="Obstacle\" />
+    </ItemGroup>
 </Project>
